--- a/src/main/resources/templates/common/sheetProject.html
+++ b/src/main/resources/templates/common/sheetProject.html
@@ -9,6 +9,7 @@
             <th>Name</th>
             <th>Begin date</th>
             <th>End Date</th>
+            <th>Country</th>
             <th>Company</th>
             <th>Actions</th>
         </tr>
@@ -19,6 +20,9 @@
             <td th:text="${project.name}">undefined</td>
             <td th:text="${project.beginDate != null} ? ${#temporals.format(project.beginDate,'dd/MM/yyyy')} : 'null value!'">undefined</td>
             <td th:text="${project.endDate != null} ?  ${project.endDate} : 'null value!'">undefined</td>
+            <td>
+                <img class="responsive-img mini-pic" th:src="@{${'/files/' + project.country.flag}}" th:title="${project.country.name}">
+            </td>
             <td th:text="${project.company.name}">undefined</td>
             <td>
                 <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
