--- a/src/main/resources/templates/Company/company.html
+++ b/src/main/resources/templates/Company/company.html
@@ -16,6 +16,7 @@
                         <th>ID</th>
                         <th>Name</th>
                         <th>Holding</th>
+                        <th>Country</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
@@ -24,6 +25,9 @@
                         <td th:text="${company.id}">undefined</td>
                         <td th:text="${company.name}">undefined</td>
                         <td th:text="${company.holding.name}">undefined</td>
+                        <td>
+                            <img class="responsive-img mini-pic" th:src="@{${'/files/' + company.country.flag}}" th:title="${company.country.name}">
+                        </td>
                         <td>
                             <a th:href="@{'/company/view/' + ${company.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
