--- a/src/main/resources/templates/Plot/viewPlot.html
+++ b/src/main/resources/templates/Plot/viewPlot.html
@@ -66,7 +66,7 @@
                             <h2>Resources</h2>
                         </div>
                         <div class="col l6 s6 right-align">
-                            <a id="editResources" class="btn-floating btn btn-small waves-effect waves-light"><i class="material-icons">add</i></a>
+                            <a id="editResources" class="btn-floating btn btn-small waves-effect waves-light"><i class="material-icons">edit</i></a>
                         </div>
                     </div>
 
@@ -81,46 +81,7 @@
                     </div>
                     <div class="map-panel">
                         <div id="map"></div>
-                        <!-- Un test de map -->
-                            <script th:inline="javascript">
-                                var map;
-                                var plot = /*[[${plot}]]*/ '';
-                                function initMap() {
-                                    var infowindow = new google.maps.InfoWindow();
-                                    map = new google.maps.Map(document.getElementById('map'), {
-                                        center: {lat:plot.latitude,lng:plot.longitude},
-                                        zoom: 2
-                                    });
-                                        var latlng = new google.maps.LatLng(plot.latitude, plot.longitude);
-                                        var marker = new google.maps.Marker({
-                                            position: latlng,
-                                            map: map,
-                                            icon: '/assets/img/tree-2-32.png'
-                                        });
-                                        google.maps.event.addListener(marker, 'click', (function(marker, plot) {
 
-                                            return function() {
-                                                var contentString = '<div class="gm-window">' +
-                                                    '<div class="gm-window-title">' +
-                                                    plot.name +
-                                                    '</div>' +
-                                                    '<div class="gm-window-content">' +
-                                                    'Size: ' + plot.size + ' ha' + '<br/>' +
-                                                    'Project: <a href="/project/view/' + plot.project.id + '">' + plot.project.name + '</a>' +
-                                                    '</div>' +
-                                                    '</div>';
-                                                infowindow.setContent(contentString);
-                                                infowindow.open(map, marker);
-                                                map.setCenter(latlng);
-                                            }
-
-                                        })(marker, i));
-                                }
-                                //google.maps.event.addDomListener(window, 'load', initMap);
-                            </script>
-                            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCf532UCd9nQEUc0fhK1qe4cdk1ppXkAzQ&callback=initMap"></script>
-
-                        <!-- Un test deux -->
                     </div>
                 </div>
             </div>
@@ -145,9 +106,74 @@
 <!--End Alerte Message-->
 <script th:inline="javascript">
     var graphJson = /*[[${graphResource}]]*/ '';
-    console.log(graphJson);
     var figure = JSON.parse(graphJson);
     Plotly.newPlot('plot-resource-graph', figure.data, figure.layout);
 </script>
-<script th:src="@{/assets/js/edit.js}"></script>
+<!-- Un test de map -->
+<script th:inline="javascript">
+    function loadMap() {
+        $(document).ready(function() {
+            var map;
+            var plot = /*[[${plot}]]*/ '';
+            var infowindow = new google.maps.InfoWindow();
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: plot.latitude, lng: plot.longitude},
+                zoom: 2
+            });
+            var latlng = new google.maps.LatLng(plot.latitude, plot.longitude);
+            var marker = new google.maps.Marker({
+                position: latlng,
+                map: map,
+                icon: '/assets/img/tree-2-32.png'
+            });
+            google.maps.event.addListener(marker, 'click', (function (marker) {
+                return function (plot) {
+                    console.log(plot);
+                    var contentString = '<div class="gm-window">' +
+                        '<div class="gm-window-title">' +
+                        plot.name +
+                        '</div>' +
+                        '<div class="gm-window-content">' +
+                        'Size: ' + plot.size + ' ha' + '<br/>' +
+                        'Project: <a href="/project/view/' + plot.project + '">' + plot.project.name + '</a>' +
+                        '</div>' +
+                        '</div>';
+                    infowindow.setContent(contentString);
+                    infowindow.open(map, marker);
+                    map.setCenter(latlng);
+                }
+            })(marker));
+        });
+    }
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCf532UCd9nQEUc0fhK1qe4cdk1ppXkAzQ&callback=loadMap"></script>
+
+<!-- Un test deux -->
+<script th:inline="javascript">
+    var plotId = [[${plot.id}]];
+    $(document).ready(function() {
+        $("#editResources").click(function () {
+                $.ajax({
+                    async: true,
+                    type: 'GET',
+                    url: '/plot/view/'+ plotId + '/edit-resources/',
+                    timeout: 3000,
+                    beforeSend: function() {
+
+                    },
+                    success: function (data) {
+                        $('#plot-resource-graph').load('/plot/view/'+ plotId + '/edit-resources/');
+                    },
+                    complete: function() {
+
+                    },
+                    error: function () {
+                        alert("Cannot load data");
+                    }
+                });
+
+            }
+        );
+    });
+</script>
 </html>
