--- a/src/main/resources/templates/Plot/editPlotResources.html
+++ b/src/main/resources/templates/Plot/editPlotResources.html
@@ -11,8 +11,10 @@
                     <div class="panel_title">
                         <h2>Add a Resource to Plot</h2>
                     </div>
-                    <form id="editPlotResourceForm" action="#" th:object="${plotResourceForm}" method="post" class="col s12" th:fragment="editPlotResourceForm">
-                        <div class="row" th:each="plotResource, rowStat : *{plotResourceList}" th:id="${rowStat.index}">
+                    <form id="editPlotResourceForm" th:action="@{'/plot/view/'+ ${plot.id} + '/edit-resources/'}" th:object="${plotResourceForm}" method="post" class="col s12" th:fragment="editPlotResourceForm">
+                        <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+                        <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+                        <div class="row input_fields_wrap" th:each="plotResource, rowStat : *{plotResourceList}" th:id="${rowStat.index}">
                             <div class="input-field col l5 m5 s5">
                                 <input type="hidden" th:field="*{plotResourceList[__${rowStat.index}__].plot}" />
                                 <select th:field="*{plotResourceList[__${rowStat.index}__].resource}">
@@ -25,7 +27,7 @@
                                 <label for="proportionForm">Proportion</label>
                             </div>
                             <div class="input-field col l2 m2 s2">
-                                <a class="input_fields_delete"><i class="material-icons left">delete</i></a>
+                                <a class="remove-field"><i class="material-icons left">delete</i></a>
                             </div>
                         </div>
 
@@ -42,9 +44,8 @@
                         </script>
                         <!-- Building line Form-->
                         <script th:inline="javascript">
-                            console.log(resourceItems);
-                            $(document).ready(function() {
-                                var deleter         = $(".input_fields_delete"); //Fields wrapper
+                            $(document).ready(function(e) {
+                                var deleter         = $(".input_fields_wrap"); //Fields wrapper
                                 var add_button      = $("#add_field_button"); //Add button ID
                                 var x = 1; //initlal text box count
                                 var optionSelect = "";
@@ -53,31 +54,56 @@
                                 }
 
                                 $(add_button).click(function (e) {
+                                    e.preventDefault();
                                     var idNewItem = parseInt($('#editPlotResourceForm').children('div').last().attr('id')) + 1;
                                     var insertion = "<div class='row' id='"+ idNewItem +"'>\n" +
                                         "                            <div class='input-field col l5 m5 s5'>\n" +
                                         "                                <input type='hidden' id='" + "plotResourceList"+ idNewItem +".plot" +"' name='" + "plotResourceList["+ idNewItem +"].plot" +"' />\n" +
-                                        "                                <select th:field='*{plotResourceList[__${rowStat.index}__].resource}'>\n" +
+                                                                        "<select id='" + "plotResourceList["+ idNewItem +"].plot" +"' name='"+ "plotResourceList[" + idNewItem + "].resource" + "'>" +
                                                                             optionSelect +
                                         "                                </select>\n" +
                                         "                                <label for='resourceForm'>Resource</label>\n" +
                                         "                            </div>\n" +
                                         "                            <div class=\"input-field col l5 m5 s5\">\n" +
-                                        "                                <input id='proportionForm' type=\"text\" th:field=\"*{plotResourceList[__${rowStat.index}__].proportion}\" th:value=\"*{plotResourceList[__${rowStat.index}__].proportion}\" />\n" +
-                                        "                                <label for=\"proportionForm\">Proportion</label>\n" +
+                                        "                                <input id='proportionForm' name='"+ "plotResourceList["+ idNewItem + "].proportion" +"' type=\"text\" id='plotResourceList[\"+ idNewItem +\"].proportion' />\n" +
+                                        "                                <label for='proportionForm'>Proportion</label>\n" +
                                         "                            </div>\n" +
                                         "                            <div class=\"input-field col l2 m2 s2\">\n" +
-                                        "                                <a class=\"input_fields_delete\"><i class=\"material-icons left\">delete</i></a>\n" +
+                                        "                                <a class='remove-field'><i class=\"material-icons left\">delete</i></a>\n" +
                                         "                            </div>\n" +
                                         "                        </div>";
+                                    //$(add_button).append(insertion);
                                     $( insertion ).insertBefore( "#add_field_button" );
                                     $('select').material_select();
                                 });
-                                $(deleter).click(function (e) {
+                                $(deleter).on("click", ".remove-field", function (e) {
                                     e.preventDefault();
                                     $(this).parent('div').parent().remove();
                                 });
+
+                                $('form').submit(function (event) {
+                                    var formData = $('form').serialize();
+                                    console.log(formData);
+                                    event.preventDefault();
+                                    var data = $('form').serialize();
+                                    var token = $('#_csrf').attr('content');
+                                    var header = $('#_csrf_header').attr('content');
+                                    $.ajax({
+                                        type: "POST",
+                                        url: "/plot/view/5/edit-resources/",
+                                        beforeSend: function(xhr) {
+                                            xhr.setRequestHeader(header, token);
+                                        },
+                                        data: data,
+                                        success: loadResourceOfPlot()
+                                    });
+
+                                });
+                                function loadResourceOfPlot() {
+                                    console.log("Pouet!")
+                                }
                             });
+
 
 
 
