--- a/src/main/resources/templates/Project/editProject.html
+++ b/src/main/resources/templates/Project/editProject.html
@@ -32,10 +32,18 @@
                     </div>
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <select th:field="*{company}" class="input-field">
-                                <option id="mainCompany" th:each="company: ${companies}" th:value="${company.id}" th:text="${company.name}"></option>
+                            <select th:field="*{country}" class="input-field">
+                                <option id="manager" class="left circle" th:each="country: ${countries}" th:data-icon="${'/files/' + country.flag}" th:value="${country.id}" th:text="${country.name}"></option>
                             </select>
-                            <label for="mainCompany">Company</label>
+                            <label for="manager">Manager</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col l6 m6 s12">
+                            <select th:field="*{company}" class="input-field">
+                                <option id="company" th:each="company: ${companies}" th:value="${company.id}" th:text="${company.name}"></option>
+                            </select>
+                            <label for="company">Company</label>
                         </div>
                     </div>
 
