--- a/src/main/resources/templates/common/sheetPlot.html
+++ b/src/main/resources/templates/common/sheetPlot.html
@@ -5,13 +5,13 @@
     <table class="bordered highlight responsive-table">
         <thead>
         <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Size</th>
-            <th>Country</th>
-            <th>Project</th>
-            <th>Manager</th>
-            <th>Actions</th>
+            <th><a class="sortable" data-sorted-by="id">ID</a></th>
+            <th><a class="sortable" data-sorted-by="name">Name</a></th>
+            <th><a class="sortable"  data-sorted-by="size">Size</a></a></th>
+            <th><a class="sortable" data-sorted-by="country">Country</a></th>
+            <th><a class="sortable" data-sorted-by="project">Project</a></th>
+            <th><a class="sortable" data-sorted-by="manager">Manager</a></th>
+            <th><a class="sortable" >Actions</a></th>
         </tr>
         </thead>
         <tbody>
