--- a/src/main/resources/templates/Plot/plot.html
+++ b/src/main/resources/templates/Plot/plot.html
@@ -17,4 +17,13 @@
 </main>
 
 <div th:replace="common/footer :: footer"></div>
+<script th:src="@{/assets/js/utils/sort-table.js}"></script>
+<script th:inline="javascript">
+    console.log("Works !!")
+    $(document).ready(function () {
+        $('.sortable').click(function (event) {
+            console.log(getUrlParameter('data-sorted-by'));
+        })
+    })
+</script>
 </html>
